# image_processing_tool

./: .gitignore  CMakeLists.txt  README.md  build.sh  setup.sh
include/: CudaImageProcessor.cuh  image_processor.hpp
src/: CudaImageProcessor.cu  image_processor.cpp  main.cpp  main.cu  utils.cu
test/: TimeComparison.cpp
